The Conversion email input done

--- a/views/layouts/common.handlebars
+++ b/views/layouts/common.handlebars
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 
@@ -38,31 +38,6 @@
 
 </head>
 
-<body>
+{{{body}}}
 
-<!--DARK OVERLAY-->
-<div class="overlay"></div>
-<!--/DARK OVERLAY-->
-
-<!--WRAP-->
-<div id="wrap">
-	<!--CONTAINER-->
-	<div class="container">
-		<h1>
-			<span class="yellow"><strong>TeraRave</strong></span>
-		</h1>
-		<br />
-		<p>We are currently reaching for the <strong>MOON.</strong> You can check back in:</p>
-		<div id="defaultCountdown"></div>
-		<form method="POST">
-			<input type="text" name="email" id="email" value="Insert Email to know more">
-			<input type="submit" value="GO!">
-		</form>
-		<p class="copyright">Copyright © 2017 TeraRave LTD</p>
-	</div>
-	<!--/CONTAINER-->
-</div>
-<!--/WRAP-->
-
-</body>
 </html>
